working ProvGraph API over Fuseki
